--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -25,7 +25,7 @@ $sub-item-color			 : rgba(#000, 0.1);
 $header-margin			 : #002766;
 $menu-top				 : white;
 $menu-height			 : 70px;
-$menu-overflow			 : #2E2E2E;
+$menu-overflow			 : #000000;
 $body-color      		 : #e8e8e8;
 $text-color      		 : rgba(#222,0.8);
 $comp-color 	 		 : complement(#222);
