--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,3 +56,6 @@
   gtag('config', 'UA-150394229-1');
 </script>
 
+<!-- Google AdSense -->
+<script data-ad-client="ca-pub-3862912849928087" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
