--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,7 @@
 $base-font: 'Lato', Calibri, Arial, sans-serif;
 $heading-font: $base-font;
 $caption-font: $base-font;
-$code-font: monospace;
+$code-font: Consolas;
 $alt-font: serif;
 
 $doc-font-size: 16;
