--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,3 +59,6 @@
 <!-- Google AdSense -->
 <script data-ad-client="ca-pub-3862912849928087" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
+{% if page.use_math %}
+  {% include mathjax_support.html %}
+{% endif %}
