[ENV] Add Google AdSense snippet

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,7 +57,8 @@
 </script>
 
 <!-- Google AdSense -->
-<script data-ad-client="ca-pub-3862912849928087" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3862912849928087"
+     crossorigin="anonymous"></script>
 
 {% if page.use_math %}
   {% include mathjax_support.html %}
