--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,8 +57,8 @@
 </script>
 
 <!-- Google AdSense -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3862912849928087"
-     crossorigin="anonymous"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3862912849928087" crossorigin="anonymous">
+</script>
 
 {% if page.use_math %}
   {% include mathjax_support.html %}
